# gbm-eor-simulation

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: make_sample_data.py  run_on_your_data.py
notebooks/: explore.ipynb
scripts/: reproduce_figure.py
src/eor_sim/: __init__.py  cli.py  model.py  plotting.py
tests/: test_model.py
