[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eor-sim"
version = "1.0.0"
description = "Teaching simulation of the extent-of-resection double-duty problem in glioblastoma survival modeling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "REPLACE WITH AUTHOR NAME", email = "REPLACE@example.com" }]
keywords = ["glioblastoma", "causal inference", "mediation", "survival analysis", "extent of resection"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "lifelines>=0.27",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
notebook = ["matplotlib>=3.6", "ipywidgets>=8.0", "jupyter>=1.0"]
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[project.scripts]
eor-sim = "eor_sim.cli:main"

[project.urls]
Homepage = "https://github.com/REPLACE_ME/gbm-eor-simulation"
Repository = "https://github.com/REPLACE_ME/gbm-eor-simulation"

[tool.setuptools.packages.find]
where = ["src"]
